crates/compiler/src/tests/e2e/bad/0041_unknown_type_constructor_in_impl/main.gom
package main;

struct Box[T] {
    value: T,
}

impl Box[T] {
    fn unwrap(self: Box[T]) -> T {
        self.value
    }
}

fn main() {
    let b: Box[uint8] = Box { value: 42 };
    let v = Box::unwrap(b);
    string_println(uint8_to_string(v));
}
